--- a/packages/letters-of-credit/src/stylesheets/sass/components/_block.scss
+++ b/packages/letters-of-credit/src/stylesheets/sass/components/_block.scss
@@ -5,11 +5,6 @@
   align-items: center;
   display: flex;
   margin: 0 auto;
-  /*width: 50%;*/
-
-  >p {
-    line-height: normal;
-  }
 }
 
 .BlockLine {
@@ -22,6 +17,7 @@
 
 .BlockText {
   display: inline-block;
+  line-height: 0;
 }
 
 .BlockNumber {
